--- a/SampleProject/SampleProject/Base.lproj/Main.storyboard
+++ b/SampleProject/SampleProject/Base.lproj/Main.storyboard
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Offerwall-->
         <scene sceneID="12o-vV-RK8">
             <objects>
-                <viewController id="fbl-Ak-XPZ" customClass="ThirdViewController" sceneMemberID="viewController">
+                <viewController id="fbl-Ak-XPZ" customClass="OfferwallViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Nt5-FR-Qhd"/>
                         <viewControllerLayoutGuide type="bottom" id="O8O-mI-TLA"/>
@@ -25,10 +23,10 @@
                                 <rect key="frame" x="19.5" y="384" width="375.5" height="14"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" systemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Efn-Cm-T0r">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Efn-Cm-T0r">
                                 <rect key="frame" x="77" y="426" width="260" height="44"/>
                                 <color key="backgroundColor" red="0.1959706182" green="0.1959706182" blue="0.1959706182" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -57,7 +55,7 @@
                                     <constraint firstAttribute="height" constant="21" id="eFR-e2-cOI"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" systemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -87,111 +85,10 @@
             </objects>
             <point key="canvasLocation" x="-162.31884057971016" y="-559.15178571428567"/>
         </scene>
-        <!--Show/Hide-->
-        <scene sceneID="hNz-n2-bh7">
-            <objects>
-                <viewController id="9pv-A4-QxB" customClass="FirstViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
-                        <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Hello Pollfish! This screen demonstrates how you can use Pollfish in your app." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="KQZ-1w-vlD">
-                                <rect key="frame" x="25" y="434" width="364" height="28"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BKU-76-imy">
-                                <rect key="frame" x="44.5" y="94" width="325" height="78"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZtI-Ge-nJe">
-                                        <rect key="frame" x="18" y="17" width="105" height="44"/>
-                                        <color key="backgroundColor" red="0.1959706182" green="0.1959706182" blue="0.1959706182" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="105" id="V4y-ul-f8e"/>
-                                            <constraint firstAttribute="height" constant="44" id="brA-Ih-DBm"/>
-                                        </constraints>
-                                        <state key="normal" title="Show">
-                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="showPollfish:" destination="9pv-A4-QxB" eventType="touchUpInside" id="gux-wc-K8c"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EGo-Kh-q79">
-                                        <rect key="frame" x="200" y="17" width="105" height="44"/>
-                                        <color key="backgroundColor" red="0.1959706182" green="0.1959706182" blue="0.1959706182" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="105" id="Z1L-RD-sV7"/>
-                                            <constraint firstAttribute="height" constant="44" id="x57-ib-Non"/>
-                                        </constraints>
-                                        <state key="normal" title="Hide">
-                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="hidePollfish:" destination="9pv-A4-QxB" eventType="touchUpInside" id="8WU-fQ-xx7"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="ZtI-Ge-nJe" firstAttribute="centerY" secondItem="BKU-76-imy" secondAttribute="centerY" id="HwP-wd-z9B"/>
-                                    <constraint firstItem="EGo-Kh-q79" firstAttribute="centerY" secondItem="BKU-76-imy" secondAttribute="centerY" id="Ixy-oY-W4y"/>
-                                    <constraint firstAttribute="height" constant="78" id="ZHi-vm-mCd"/>
-                                    <constraint firstItem="ZtI-Ge-nJe" firstAttribute="leading" secondItem="BKU-76-imy" secondAttribute="leading" constant="18" id="dbY-Cm-BMW"/>
-                                    <constraint firstAttribute="trailing" secondItem="EGo-Kh-q79" secondAttribute="trailing" constant="20" id="ixb-lW-Rth"/>
-                                    <constraint firstItem="EGo-Kh-q79" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ZtI-Ge-nJe" secondAttribute="trailing" constant="8" symbolic="YES" id="nXj-UF-F3J"/>
-                                    <constraint firstAttribute="width" constant="325" id="y0A-aY-6ln"/>
-                                </constraints>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Logging area..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fvt-h9-tbY">
-                                <rect key="frame" x="25" y="412" width="364" height="12"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="394" id="jWp-ms-msT"/>
-                                    <constraint firstAttribute="height" constant="21" id="pt9-AX-8Yv"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="jWp-ms-msT"/>
-                                        <exclude reference="pt9-AX-8Yv"/>
-                                    </mask>
-                                </variation>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="6BV-lF-sBN"/>
-                            <constraint firstItem="BKU-76-imy" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="50" id="GZj-5c-Bpm"/>
-                            <constraint firstItem="BKU-76-imy" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="R8g-id-JTZ"/>
-                            <constraint firstItem="fvt-h9-tbY" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="5" id="Y7A-Cp-5up"/>
-                            <constraint firstAttribute="centerY" secondItem="KQZ-1w-vlD" secondAttribute="centerY" id="exm-UA-ej4"/>
-                            <constraint firstItem="KQZ-1w-vlD" firstAttribute="top" secondItem="fvt-h9-tbY" secondAttribute="bottom" constant="10" id="jVq-fQ-arS"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="KQZ-1w-vlD" secondAttribute="trailing" constant="5" id="xtw-HK-DbN"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="fvt-h9-tbY" secondAttribute="trailing" constant="5" id="y0c-Lc-WK3"/>
-                        </constraints>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Show/Hide" image="first" id="acW-dT-cKf"/>
-                    <connections>
-                        <outlet property="loggingLabel" destination="fvt-h9-tbY" id="NaT-Wn-YVS"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="750" y="-320"/>
-        </scene>
         <!--Rewarded Survey-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController id="8rJ-Kc-sve" customClass="SecondViewController" sceneMemberID="viewController">
+                <viewController id="8rJ-Kc-sve" customClass="RewardedSurveyViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="L7p-HK-0SC"/>
                         <viewControllerLayoutGuide type="bottom" id="Djb-ko-YwX"/>
@@ -204,10 +101,10 @@
                                 <rect key="frame" x="25" y="364" width="364" height="28"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" systemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9VM-Cd-8hD">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9VM-Cd-8hD">
                                 <rect key="frame" x="77" y="411" width="260" height="44"/>
                                 <color key="backgroundColor" red="0.1959706182" green="0.1959706182" blue="0.1959706182" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -226,7 +123,6 @@
                                     </mask>
                                 </variation>
                                 <connections>
-                                    <action selector="showPollfish:" destination="9pv-A4-QxB" eventType="touchUpInside" id="dGw-BM-6uv"/>
                                     <action selector="showPollfish:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="fvb-HR-SKn"/>
                                 </connections>
                             </button>
@@ -237,7 +133,7 @@
                                     <constraint firstAttribute="height" constant="21" id="m4k-XJ-9DR"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" systemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -292,7 +188,6 @@
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                         <segue destination="fbl-Ak-XPZ" kind="relationship" relationship="viewControllers" id="M8G-uq-YRV"/>
                     </connections>
@@ -305,5 +200,8 @@
     <resources>
         <image name="first" width="30" height="30"/>
         <image name="second" width="30" height="30"/>
+        <systemColor name="darkTextColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
